--- a/Proyectos/index.html
+++ b/Proyectos/index.html
@@ -136,7 +136,7 @@
 										<h2>Massa libero</h2>
 									</header>
 									<p>These are some of the projects that I have worked on, I would like to share more information and metrics abour
-										my previous experiences but some those insights are private or I lost them. Thank you for being interested in my
+										my previous experiences but some those insights are private or I lost them. Thank you for being interested on my
 									work, let me know if you are interested on me to make a profit for your business</p>
 									<ul class="actions">
 										<li><a href="../index.html" class="button next">Work Experiences</a></li>
