--- a/Proyectos/MegaD.html
+++ b/Proyectos/MegaD.html
@@ -44,7 +44,7 @@
 									<header class="major">
 										<h1>Aesthetic Surgeons Platform</h1>
 									</header>
-									<span class="image main"><img src="images/ima2.png" alt="" /></span>
+									<span class="image main"><img src="images/ima2.PNG" alt="" /></span>
 									<p>This website was built to increase the number of surgeons and aesthetic 
 										doctors that the Company had at that moment, but this was built at the
 										 same time the COVID-19 Started and due to it, most of the doctors had
@@ -56,9 +56,9 @@
 										  that they wanted.  This was a successful strategy because the esthetic surgeons 
 										  increased their social approvement which was reflected in sales and followers on 
 										  their Instagram accounts. </p>
-									<span class="image main"><img src="images/ima17.png" alt="" /></span>
+									<span class="image main"><img src="/images/ima17.PNG" alt="" /></span>
 									
-									<span class="image main"><img src="images/ima9.png" alt="" /></span>
+									<span class="image main"><img src="images/ima9.PNG" alt="" /></span>
 									<ul class="actions stacked">
 										<li><a href="index.html" class="button primary fit">Projects</a></li>
 
