--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 										<h2><a href="#">MEGA DOCTORES <br/>
 											 ICUNOX</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic04.PNG" alt="" /></a>
 									<p>
 										<ul>
 											<li>Saved the company from bankruptcy during and after the
@@ -167,7 +167,7 @@
 										<h2><a href="#">ECOMMERCE GROUP<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic05.PNG" alt="" /></a>
 									<p>
 										<ul>
 												<li>Managed the whole process from zero to hero. From measuring
@@ -200,7 +200,7 @@
 										<h2><a href="#">RIVER MAX <br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic06.PNG" alt="" /></a>
 									<p>
 										<ul>
 											<li>Set up a working environment that allowed the company to
