--- a/Proyectos/MegaD.html
+++ b/Proyectos/MegaD.html
@@ -56,7 +56,7 @@
 										  that they wanted.  This was a successful strategy because the esthetic surgeons 
 										  increased their social approvement which was reflected in sales and followers on 
 										  their Instagram accounts. </p>
-									<span class="image main"><img src="/images/ima17.PNG" alt="" /></span>
+									<span class="image main"><img src="images/ima17.PNG" alt="" /></span>
 									
 									<span class="image main"><img src="images/ima9.PNG" alt="" /></span>
 									<ul class="actions stacked">
