--- a/Proyectos/jhon.html
+++ b/Proyectos/jhon.html
@@ -44,13 +44,13 @@
 									<header class="major">
 										<h1>Jhon Valencia Esthetic Dentist</h1>
 									</header>
-									<span class="image main"><img src="images/ima1.png" alt="" /></span>
+									<span class="image main"><img src="images/ima1.PNG" alt="" /></span>
 									<p>This project was for a customer of MegaDoctores who wanted to have a website with an automated system to 
 										schedule appointments for his patients, saving him money and time because he wouldn't need an assistant 
 										to schedule the appointments again.  This customer was one of the successful cases that MegaDoctores has 
 										had, we achieved 200.000 Followers on Instagram by making referral marketing with influencers, increasing 
 										the number of appointments, and making a profit of 100.000.000 COP ($20,000 USD)/ month.</p>
-									<span class="image main"><img src="images/ima16.png" alt="" /></span>
+									<span class="image main"><img src="images/ima16.PNG" alt="" /></span>
 
 									<ul class="actions stacked">
 										<li><a href="index.html" class="button primary fit">Projects</a></li>
