--- a/Proyectos/icunox.html
+++ b/Proyectos/icunox.html
@@ -44,13 +44,13 @@
 									<header class="major">
 										<h1>ICUNOX </h1>
 									</header>
-									<span class="image main"><img src="images/ima4.png" alt="" /></span>
+									<span class="image main"><img src="images/ima4.PNG" alt="" /></span>
 									<p>This website was built because of the covid we run out of customers,
 										and we only had the technology that we have been using for our surgeons 
 										on MegaDoctores, we thought about selling this technology as a digital 
 										sales funnel for small businesses that were looking for improving their 
 										digital sales process.</p>
-									<span class="image main"><img src="images/ima18.png" alt="" /></span>
+									<span class="image main"><img src="images/ima18.PNG" alt="" /></span>
 
 									<ul class="actions stacked">
 										<li><a href="index.html" class="button primary fit">Projects</a></li>
