--- a/Proyectos/vive.html
+++ b/Proyectos/vive.html
@@ -44,7 +44,7 @@
 									<header class="major">
 										<h1>Vive Meals</h1>
 									</header>
-									<span class="image main"><img src="images/ima20.png" alt="" /></span>
+									<span class="image main"><img src="images/ima20.PNG" alt="" /></span>
 									<p>This project was the first customer of Icunox, it was a Meal preps 
 										company located In Miami they wanted to grow their business but didn’t 
 										know how to do it because they always have the same number of customers 
@@ -57,7 +57,7 @@
 										 from 20,000 USD to 60,000 USD/month, also their social approvement increased on Instagram 
 										 thank you to our referral marketing strategy with influencers. Now they have 80.000 Followers on Instagram,
 										after I quit they changed their name to Nutri Vive</p>
-									<span class="image main"><img src="images/ima19.png" alt="" /></span>
+									<span class="image main"><img src="images/ima19.PNG" alt="" /></span>
 
 									<ul class="actions stacked">
 										<li><a href="index.html" class="button primary fit">Projects</a></li>
