--- a/Proyectos/silent.html
+++ b/Proyectos/silent.html
@@ -44,7 +44,7 @@
 									<header class="major">
 										<h1>Silent Phone</h1>
 									</header>
-									<span class="image main"><img src="images/ima5.png" alt="" /></span>
+									<span class="image main"><img src="images/ima5.PNG" alt="" /></span>
 									<p>This was one of a series of projects that I did for a company called 
 										Xlab from the Netherlands to increase their presence on LATAM, they 
 										wanted to optimize the basic SEO of the website so
@@ -53,12 +53,12 @@
 										 and reviewed the links, connected and set up Google Search at the end they 
 										 passed from not having a presence on Google refer to their market to an average 
 										 position of 12. </p>
-									<span class="image main"><img src="images/img15.png" alt="" /></span>
+									<span class="image main"><img src="images/img15.PNG" alt="" /></span>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-											<div class="col-4"><span class="image fit"><img src="images/img10.png" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/img13.png" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/img12.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/img10.PNG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/img13.PNG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/img12.PNG" alt="" /></span></div>
 										</div>
 									</div>
 									<ul class="actions stacked">
