--- a/Proyectos/rivera.html
+++ b/Proyectos/rivera.html
@@ -44,12 +44,12 @@
 									<header class="major">
 										<h1>Rivera Clothing</h1>
 									</header>
-									<span class="image main"><img src="images/ima6.png" alt="" /></span>
+									<span class="image main"><img src="images/ima6.PNG" alt="" /></span>
 									<p>This website was born from River Max, as a new brand for a different 
 										public they wanted to create an exclusive brand with a minimal concept, 
 										so I built the website optimizing it for technical SEO and a minimal 
 										design.</p>
-									<span class="image main"><img src="images/ima21.png" alt="" /></span>
+									<span class="image main"><img src="images/ima21.PNG" alt="" /></span>
 
 									<ul class="actions stacked">
 										<li><a href="index.html" class="button primary fit">Projects</a></li>
