--- a/Proyectos/gtech.html
+++ b/Proyectos/gtech.html
@@ -44,7 +44,7 @@
 									<header class="major">
 										<h1>Gtech.Systems</h1>
 									</header>
-									<span class="image main"><img src="images/ima7.png" alt="" /></span>
+									<span class="image main"><img src="images/ima7.PNG" alt="" /></span>
 									<p>When I worked for Gtech.Systems, they hadn’t implemented Google Analytics, 
 										GTA, or Google Search Console, they wanted to increase their visibility 
 										and boost their sales. They wanted to activate their Instagram account 
@@ -69,8 +69,8 @@
 													   make an email marketing campaign for those who are registered on the form.  Doing this
 													    is a huge advantage referring to the competition because most of the companies don’t
 														 know this strategy and is easy to keep updated this is going to work for years.</p>
-									<span class="image main"><img src="images/ima22.png" alt="" /></span>
-									<span class="image main"><img src="images/ima23.png" alt="" /></span>
+									<span class="image main"><img src="images/ima22.PNG" alt="" /></span>
+									<span class="image main"><img src="images/ima23.PNG" alt="" /></span>
 
 									<ul class="actions stacked">
 										<li><a href="index.html" class="button primary fit">Projects</a></li>
