--- a/Proyectos/discovery.html
+++ b/Proyectos/discovery.html
@@ -44,7 +44,7 @@
 									<header class="major">
 										<h1>Disccovery Partners</h1>
 									</header>
-									<span class="image main"><img src="images/ima8.png" alt="" /></span>
+									<span class="image main"><img src="images/ima8.PNG" alt="" /></span>
 									<p>This is the most recent project that I am working on this is a website
 										 that I’m building for Discovery, they don’t have a presence on Google, 
 										 so I made keyword research about the services of the companies and a bench
