--- a/Proyectos/index.html
+++ b/Proyectos/index.html
@@ -69,7 +69,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="MegaD.html" class="link">Mega Doctores</a></h3>
+										<h3><a href="megaD.html" class="link">Mega Doctores</a></h3>
 										<p>Aesthetic Surgeons Platform</p>
 									</header>
 								</article>
@@ -127,16 +127,25 @@
 										<p>Staffing Company</p>
 									</header>
 								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="report.html" class="link">MARKETING REPORTS</a></h3>
+										<p>These are some templates that I used to use</p>
+									</header>
+								</article>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>Thank You</h2>
 									</header>
 									<p>These are some of the projects that I have worked on, I would like to share more information and metrics abour
-										my previous experiences but some those insights are private or I lost them. Thank you for being interested on my
+										my previous experiences but some those insights are private or I lost them. Thank you for being interested in my
 									work, let me know if you are interested on me to make a profit for your business</p>
 									<ul class="actions">
 										<li><a href="../index.html" class="button next">Work Experiences</a></li>
