--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 											<li>Saved 25,000,000 COP (5,000 USD) by making them a website
 												optimized for SEO to measure the user experience and user
 												interface with marketing automation tools and processes.</li><br>
-												<li>SImproved the website visibility by getting a good position on
+												<li>Improved the website visibility by getting a good position on
 													search engines. As a result, this increased their followers on
 													LinkedIn and the awareness as an official Salesforce Partner.</li><br>
 										</ul>
