--- a/Proyectos/report.html
+++ b/Proyectos/report.html
@@ -42,7 +42,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Looker stuido reports</h1>
+										<h1>Looker studio reports</h1>
 									</header>
 									<p>These are some of the templates that I used to use for reporting the strategies and different 
 										efforts that the companies are implementing through their social media platforms, 
