--- a/Proyectos/index.html
+++ b/Proyectos/index.html
@@ -69,7 +69,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="megaD.html" class="link">Mega Doctores</a></h3>
+										<h3><a href="MegaD.html" class="link">Mega Doctores</a></h3>
 										<p>Aesthetic Surgeons Platform</p>
 									</header>
 								</article>
@@ -212,4 +212,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
