--- a/Proyectos/index.html
+++ b/Proyectos/index.html
@@ -96,8 +96,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="silent.html" class="link">Silent Phone</a></h3>
-										<p>Xlab Company From Netherlands </p>
+										<h3><a href="vivus.html" class="link">VIVUS MÉXICO</a></h3>
+										<p>FinTech - Digital Lending</p>
 									</header>
 								</article>
 								<article>
@@ -105,8 +105,17 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="rivera.html" class="link">Rivera</a></h3>
-										<p>A brand born from River Max</p>
+										<h3><a href="doctor-sol.html" class="link">DOCTOR SOL PERÚ</a></h3>
+										<p>FinTech - Consumer Lending</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic03.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="doctor-peso.html" class="link">DOCTOR PESO COLOMBIA</a></h3>
+										<p>FinTech - Financial Services</p>
 									</header>
 								</article>
 								<article>
@@ -136,6 +145,24 @@
 										<p>These are some templates that I used to use</p>
 									</header>
 								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic06.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="rivera.html" class="link">Rivera</a></h3>
+										<p>A brand born from River Max</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="silent.html" class="link">Silent Phone</a></h3>
+										<p>Xlab Company From Netherlands</p>
+									</header>
+								</article>
 							</section>
 
 						<!-- Two -->
@@ -144,9 +171,7 @@
 									<header class="major">
 										<h2>Thank You</h2>
 									</header>
-									<p>These are some of the projects that I have worked on, I would like to share more information and metrics abour
-										my previous experiences but some those insights are private or I lost them. Thank you for being interested in my
-									work, let me know if you are interested on me to make a profit for your business</p>
+									<p>These are a few selected projects I’ve worked on. I’d love to share deeper metrics; however, some insights are confidential or no longer available. If you’re exploring ways to grow profitably, I’m happy to assess your business and outline a tailored growth plan.</p>
 									<ul class="actions">
 										<li><a href="../index.html" class="button next">Work Experiences</a></li>
 									</ul>
@@ -163,7 +188,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">julianpoli.20@gmail.com</a>
+										<a href="#">julian.ia.rivera@gmail.com</a>
 									</div>
 								</section>
 								<section>
@@ -189,11 +214,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
-								<li><a href="https://www.tiktok.com/@julianriversss" class="icon brands alt fa-tiktok" target="_blank"><span class="label">TikTok</span></a></li>
-								<li><a href="https://www.instagram.com/julianriverss" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
-								<li><a href="https://www.linkedin.com/in/julian-rivera-g" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
-							</ul>
+
 							<ul class="copyright">
 								<li>&copy; Julián Rivera</li> since 2017<li> <a href="https://www.linkedin.com/in/julian-rivera-g" target="_blank">My goal to grow your business</a></li>
 							</ul>
