--- a/Proyectos/doctor-peso.html
+++ b/Proyectos/doctor-peso.html
@@ -616,6 +616,19 @@
 								</div>
 							</div>
 
+							<!-- Analytics Section -->
+							<h3 class="section-title" style="margin-top: 3em; color: #4299e1 !important;">Performance Analytics</h3>
+							<div style="margin: 2em 0;">
+								<div class="image-container" style="height: 350px; display: flex; align-items: center; justify-content: center; background: #f7fafc; margin-left: auto; margin-right: auto; max-width: 800px;">
+									<img src="images/DoctrorPesoAnalytics.png" alt="Doctor Peso Analytics Dashboard" style="max-height: 330px; max-width: 100%; object-fit: contain;" />
+								</div>
+								<div style="text-align: center; margin-top: 1em; max-width: 800px; margin-left: auto; margin-right: auto; background: rgba(255,255,255,0.7); padding: 1em; border-radius: 4px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+									<p style="font-style: italic; font-size: 1.1em; line-height: 1.5; color: #1a365d; margin: 0; font-weight: 500;">
+										Campaign performance analytics show the impact of our optimization efforts, highlighting the successful reduction in acquisition costs and improved conversion rates across digital channels.
+									</p>
+								</div>
+							</div>
+
 							<!-- Skills Implemented -->
 							<div class="skills-section" style="margin-top: 4em;">
 								<h2 class="section-title">Skills Implemented</h2>
