--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 										<li>Explored new BTL and digital strategies (SEO, automation) to enhance brand visibility and cut CAC.</li>
 									</ul>
 									<ul class="icons">
-										<li><a href="https://companywebsite.com/" class="fa fa-bullseye" target="_blank"><span class="label"></span></a></li>
+										<li><a href="https://digitalfinance.com/" class="fa fa-bullseye" target="_blank"><span class="label"></span></a></li>
 										<li><a href="https://www.linkedin.com/company/digital-finance-international/" class="icon brands fa-linkedin" target="_blank"><span class="label">linkedin</span></a></li>
 									</ul>
 								</article>
