--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 								</header>
 								<a href="#" class="image main hero-image"><img src="images/pic01.png" alt="Julián Rivera Gómez" /></a>
 								<ul class="actions special">
-									<li><a href="assets/curriculum-vitae/JulianRiveraCV.pdf" class="button large" download>Download CV</a></li>
+									<li><a href="/assets/curriculum/Julian.pdf" class="button primary" download="Julian_Rivera_CV.pdf">Download CV</a></li>
 								</ul>
 							</article>
 
