--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/dfi.png" alt="Digital Finance International" /></a>
 									<ul>
-										<li>As a marketing strategist at Digital Finance International, I played a crucial role in the successful expansion into key markets such as Peru, Mexico, Colombia, and the Dominican Republic, employing effective user acquisition strategies.</li>
-										<li>I lead remote teams in highly effective campaigns on platforms like Meta and Google, resulting in significant growth in brand presence.</li>
+										<li>Played a crucial role in the successful expansion into key markets such as Peru, Mexico, Colombia, and the Dominican Republic, employing effective user acquisition strategies.</li>
+										<li>Lead remote teams in highly effective campaigns on platforms like Meta and Google, resulting in significant growth in brand presence.</li>
 										<li>Explored new BTL and digital strategies (SEO, automation) to enhance brand visibility and cut CAC.</li>
 									</ul>
 									<ul class="icons">
