--- a/index.html
+++ b/index.html
@@ -466,9 +466,22 @@
 										critical thinking. A person of high integrity and
 										adaptable to change.</p>
 								</header>
-								<a href="#" class="image main hero-image"><img src="images/pic01.png" alt="Julián Rivera Gómez" /></a>
+								<!-- Replaced image with Vimeo video embed -->
+								<div class="video-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin-bottom: 1.5em;">
+									<iframe src="https://player.vimeo.com/video/1121571916?h=d129dfd033&autoplay=0&loop=1&title=0&byline=0&portrait=0" 
+										style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
+										frameborder="0" 
+										allow="autoplay; fullscreen; picture-in-picture" 
+										allowfullscreen 
+										title="Julián Rivera - Digital Marketing Professional">
+									</iframe>
+								</div>
 								<ul class="actions special">
-									<li><a href="/assets/curriculum/Julian.pdf" class="button primary" download="Julian_Rivera_CV.pdf">Download CV</a></li>
+									<li><a href="assets/curriculum-vitae/JulianRiveraCV.pdf"
+   class="button large"
+   download="JulianRiveraCV.pdf">
+  Download CV
+</a></li>
 								</ul>
 							</article>
 
