--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 				<!-- Header -->
 					<header id="header">
 						<a href="index.html" class="logo">Julián Rivera</a>
-					</header>
+					</header>https://github.com/julianriverss/portfolio.git
 
 				<!-- Nav -->
 					<nav id="nav">
@@ -467,21 +467,10 @@
 										adaptable to change.</p>
 								</header>
 								<!-- Replaced image with Vimeo video embed -->
+
 								<div class="video-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin-bottom: 1.5em;">
-									<iframe src="https://player.vimeo.com/video/1121571916?h=d129dfd033&autoplay=0&loop=1&title=0&byline=0&portrait=0" 
-										style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
-										frameborder="0" 
-										allow="autoplay; fullscreen; picture-in-picture" 
-										allowfullscreen 
-										title="Julián Rivera - Digital Marketing Professional">
-									</iframe>
-								</div>
-								<ul class="actions special">
-									<li><a href="assets/curriculum/Julian.pdf"
-   class="button large"
-   download="JulianRiveraCV.pdf">
-  Download CV
-</a></li>
+    <img src="images/pic01.png" alt="Julián Rivera - Digital Marketing Professional" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" />
+
 								</ul>
 							</article>
 
@@ -661,4 +650,5 @@
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
+
 			<script src="assets/js/breakpoints.min.js"></script>			<script src="assets/js/util.js"></script>			<script src="assets/js/main.js"></script>	</body></html>
